<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome_to_alc_4_0">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
    <string name="todo">TODO</string>
    <string name="alinda_julius">ALINDA JULIUS</string>
    <string name="julius_alinda">JULIUS ALINDA</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="textview">TextView</string>
    <string name="uganda">Uganda</string>

    <string name="email">Email:</string>
    <string name="juliusalinda_gmail_com">juliusalinda@gmail.com</string>
    <string name="phone_number">Phone Number:</string>
    <string name="_256773057840">+256773057840</string>
    <string name="slack_username">Slack Username:</string>
    <string name="alindajulius">AlindaJulius</string>

</resources>
