<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityC">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="319dp"
        android:layout_height="138dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_green_light"
        android:contentDescription="@string/my_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/julius" />

    <TextView
        android:id="@+id/name"
        android:layout_width="181dp"
        android:layout_height="52dp"
        android:layout_marginTop="180dp"
        android:text="@string/julius_alinda"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        tools:text="JULIUS ALINDA" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="133dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="252dp"
        android:text="@string/track"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Track:" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="162dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="8dp"
        android:text="@string/android"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Android" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="144dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/country"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="Country" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="8dp"
        android:text="@string/uganda"
        android:textAlignment="textStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.723"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="134dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="372dp"
        android:text="@string/email"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Email:" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="165dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="8dp"
        android:text="@string/juliusalinda_gmail_com"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="juliusalinda@gmail.com" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="137dp"
        android:layout_height="39dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="424dp"
        android:text="@string/phone_number"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Phone Number:" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="163dp"
        android:layout_height="31dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_256773057840"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.724"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="+256773057840" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="139dp"
        android:layout_height="33dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="476dp"
        android:text="@string/slack_username"
        android:textAlignment="viewStart"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Slack Username:" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="120dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="476dp"
        android:layout_marginEnd="8dp"
        android:text="@string/alindajulius"
        android:textColor="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.586"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Alinda Julius" />

    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.525">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

