<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivityA">

    <TextView
        android:id="@+id/textView"
        android:layout_width="403dp"
        android:layout_height="82dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/Button1"
        android:layout_width="383dp"
        android:layout_height="77dp"

        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="157dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/about_alc"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="383dp"
        android:layout_height="77dp"

        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="8dp"
        android:background="@android:color/holo_orange_light"
        android:text="@string/my_profile"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark" />

</RelativeLayout>